[package]
name = "ps-tree"
version = "0.1.2"
authors = ["Axetroy <axetroy.dev@gmail.com>"]
readme = "README.md"
keywords = ["process", "cpu", "RAM"]
repository = "https://github.com/axetroy/ps-tree.rs"
description = """
A command line tool, which can display the process tree of the system, and display the CPU and memory usage of each process.
"""

edition = "2021"

[[bin]]
name = "ps-tree"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
sysinfo = "0.30.12"
ctrlc = "3.4.4"

[profile.release]
# https://github.com/johnthagen/min-sized-rust
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
